objects/OpportunityProductDetail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunitiy Product Details</relationshipLabel>
        <relationshipName>Opportunitiy_Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting__c</fullName>
        <label>Accounting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Quote_US__c</fullName>
        <label>Actual Quote US $</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_GDoc__c</fullName>
        <label>Additional GDoc</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WEB</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_HR__c</fullName>
        <label>Additional HR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ctrol Horas</fullName>
                </value>
                <value>
                    <fullName>EPM-Tablero de control</fullName>
                </value>
                <value>
                    <fullName>eRecibo</fullName>
                </value>
                <value>
                    <fullName>Evaluación de Desempeño</fullName>
                </value>
                <value>
                    <fullName>HR Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional__c</fullName>
        <label>Additional</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activo Fijo</fullName>
                </value>
                <value>
                    <fullName>Adminsitración de Partidas</fullName>
                </value>
                <value>
                    <fullName>Analisis de Dotación</fullName>
                </value>
                <value>
                    <fullName>Analisis de Remuneraciones</fullName>
                </value>
                <value>
                    <fullName>Apertura Contable</fullName>
                </value>
                <value>
                    <fullName>Auditoría</fullName>
                </value>
                <value>
                    <fullName>Autorizaciones de Entrega</fullName>
                </value>
                <value>
                    <fullName>Cálculo de intereses por mora</fullName>
                </value>
                <value>
                    <fullName>Capacidad</fullName>
                </value>
                <value>
                    <fullName>Conciliación Automática</fullName>
                </value>
                <value>
                    <fullName>COT CABA</fullName>
                </value>
                <value>
                    <fullName>Datos Adicionales</fullName>
                </value>
                <value>
                    <fullName>Derechos por Usuario</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>EPM-Tablero de control</fullName>
                </value>
                <value>
                    <fullName>Estimación de gastos importación</fullName>
                </value>
                <value>
                    <fullName>Everywhere</fullName>
                </value>
                <value>
                    <fullName>F572</fullName>
                </value>
                <value>
                    <fullName>Fc.Electrónica y/o Reg.Electrónica</fullName>
                </value>
                <value>
                    <fullName>Ganancias Automático</fullName>
                </value>
                <value>
                    <fullName>Impresión de cheques</fullName>
                </value>
                <value>
                    <fullName>Integración de sucursales</fullName>
                </value>
                <value>
                    <fullName>InterBanking</fullName>
                </value>
                <value>
                    <fullName>Kits de Vta</fullName>
                </value>
                <value>
                    <fullName>Logística</fullName>
                </value>
                <value>
                    <fullName>Mercado Pago</fullName>
                </value>
                <value>
                    <fullName>Módulo Estándar</fullName>
                </value>
                <value>
                    <fullName>Órdenes de Compra</fullName>
                </value>
                <value>
                    <fullName>Otros (Sólo Sist. Nuevos)</fullName>
                </value>
                <value>
                    <fullName>Pago Mis Cuentas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_CRM__c</fullName>
        <label>Amount CRM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Payroll_Subscription__c</fullName>
        <label>Amount Payroll Subscription</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BPM_Puestos__c</fullName>
        <label>BPM Jobs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_on_line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backup on line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_on_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balance on Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_Core__c</fullName>
        <label>Basic Core</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basic_GDoc__c</fullName>
        <label>Basic GDoc</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WEB</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basics__c</fullName>
        <label>Basics</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Basico Express</fullName>
                </value>
                <value>
                    <fullName>Basico RRHH Express</fullName>
                </value>
                <value>
                    <fullName>Basico RRHH SQL</fullName>
                </value>
                <value>
                    <fullName>Basico SQL</fullName>
                </value>
                <value>
                    <fullName>Basico SQL Sin Inventarios</fullName>
                </value>
                <value>
                    <fullName>Solo Adicionales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeper_Wages__c</fullName>
        <label>Bookkeeper/Wages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <label>CRM</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_to_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call to Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Companies__c</fullName>
        <label>Companies</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunitiy Product Details</relationshipLabel>
        <relationshipName>Opportunitiy_Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Continuous_Receipts__c</fullName>
        <label>Continuous Receipts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Basic_Amount__c</fullName>
        <label>Core Basic Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Curso_de_apacitaci_n__c</fullName>
        <label>Curso de apacitación</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Import__c</fullName>
        <label>Data Import</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Budget__c</fullName>
        <label>Date Budget</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to__c</fullName>
        <label>Date to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Models__c</fullName>
        <label>Description Models</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dollar__c</fullName>
        <label>Dollar</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_configuracion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee configuracion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flex__c</fullName>
        <label>Flex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Functional_Meetings__c</fullName>
        <label>Functional Meetings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gdoc__c</fullName>
        <label>Gdoc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HR_Bundles__c</fullName>
        <label>HR Bundles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hasta 300 leg</fullName>
                </value>
                <value>
                    <fullName>Hasta 500 leg</fullName>
                </value>
                <value>
                    <fullName>Hasta 1000 leg</fullName>
                </value>
                <value>
                    <fullName>Hasta 3000 leg</fullName>
                </value>
                <value>
                    <fullName>Más de 3000 leg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_Consulting_Distributor__c</fullName>
        <label>Hours Consulting Distributor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hs_MAM__c</fullName>
        <label>Hs MAM</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hs_STA__c</fullName>
        <label>Hs STA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Imp_Lic_Rental__c</fullName>
        <label>Imp Lic Rental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importers__c</fullName>
        <label>Importers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Compras</fullName>
                </value>
                <value>
                    <fullName>Fondos</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Ventas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <label>Interface</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Colectores</fullName>
                </value>
                <value>
                    <fullName>Lince</fullName>
                </value>
                <value>
                    <fullName>M-Fidelio</fullName>
                </value>
                <value>
                    <fullName>NetMedica</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Propios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Laser_Receipts__c</fullName>
        <label>Laser Receipts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maturity__c</fullName>
        <label>Maturity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration__c</fullName>
        <label>Migration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DOS a SQL</fullName>
                </value>
                <value>
                    <fullName>Express a SQL</fullName>
                </value>
                <value>
                    <fullName>Micropym a Flex ERP</fullName>
                </value>
                <value>
                    <fullName>MSDE a SQL</fullName>
                </value>
                <value>
                    <fullName>RRHH Express a RRHH SQL</fullName>
                </value>
                <value>
                    <fullName>SJ a RRHH Express</fullName>
                </value>
                <value>
                    <fullName>SJ a RRHH SQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_to_Flex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migration to Flex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modis__c</fullName>
        <label>Modis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiple_Selection_Bejerman__c</fullName>
        <label>Multiple Selection Bejerman</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales – Contabilidad</fullName>
                </value>
                <value>
                    <fullName>Flexware</fullName>
                </value>
                <value>
                    <fullName>IVA</fullName>
                </value>
                <value>
                    <fullName>Sueldos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_Selection__c</fullName>
        <label>Multiple Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales – Activo Fijo</fullName>
                </value>
                <value>
                    <fullName>Contabilidad General</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Impuestos a las Ganancias</fullName>
                </value>
                <value>
                    <fullName>IVA Ventas/Compras</fullName>
                </value>
                <value>
                    <fullName>Nómina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nominate_Amount_Factual__c</fullName>
        <label>Nominate Amount Factual</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_CAL__c</fullName>
        <label>Number of CAL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_CD__c</fullName>
        <label>Number of CD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8.70</fullName>
                </value>
                <value>
                    <fullName>8.71</fullName>
                </value>
                <value>
                    <fullName>8.80</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Functional_Hours__c</fullName>
        <label>Number of Functional Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Technical_Hours__c</fullName>
        <label>Number of Technical Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online__c</fullName>
        <label>Online</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>EXPRESS</fullName>
                </value>
                <value>
                    <fullName>Adicionales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Id__c</fullName>
        <label>Opportunity Line Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product Details</relationshipLabel>
        <relationshipName>Opportunitiy_Product_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points_of_Sale__c</fullName>
        <label>Points of Sale</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posts_Balances__c</fullName>
        <label>Posts Balances</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posts_GDoc__c</fullName>
        <label>Posts GDoc</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posts__c</fullName>
        <label>Posts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Opportunitiy Product Details</relationshipLabel>
        <relationshipName>Opportunitiy_Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <label>Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunitiy Product Details</relationshipLabel>
        <relationshipName>Opportunitiy_Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_USP__c</fullName>
        <label>Quantity USP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queries_Posts__c</fullName>
        <label>Queries Posts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queries_WEB__c</fullName>
        <label>Queries WEB</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queries__c</fullName>
        <label>Queries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RRHH__c</fullName>
        <label>RRHH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renew_and_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renew and Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_ID__c</fullName>
        <formula>Contact__r.SAP_Contact_ID__c</formula>
        <label>SAP Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salaries__c</fullName>
        <label>Salaries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Total_Price__c</fullName>
        <label>Sales Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Serv_Hosting__c</fullName>
        <label>Serv Hosting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stands_for_Point_of_Sale__c</fullName>
        <label>Stands for Point of Sale</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Meetings__c</fullName>
        <label>Technical Meetings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transact_BPM__c</fullName>
        <label>Transact BPM</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <label>Web</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>eFlexWeb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eFlexWeb</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eSales_Amount__c</fullName>
        <label>eSales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>e_Data__c</fullName>
        <label>e Data</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>e_Sales__c</fullName>
        <label>e Sales</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Product Detail</label>
    <nameField>
        <displayFormat>DP-{0000000000}</displayFormat>
        <label>Opportunity Product Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunitiy Product Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_Contact</fullName>
        <active>true</active>
        <description>Selected Contact must have a valid email address.</description>
        <errorConditionFormula>ISBLANK (Contact__r.Email) &amp;&amp; NOT (ISBLANK (Contact__c))</errorConditionFormula>
        <errorMessage>El contacto debe tener cargada una dirección de correo electrónico</errorMessage>
    </validationRules>
</CustomObject>